# fuel-fairness-project

./: .gitignore  build_external.py  build_features.py  build_gold.py  build_silver.py  claude.md  eda.ipynb  fuel-overcharging-project-plan.md  fuel_snapshot.py  inspect_feed.py  project_definition.md  pyproject.toml  run_collection.ps1  setup_scheduler.ps1  signal2_validation.py  smoke_test.py
.github/scripts/: keep_alive.py
.github/workflows/: collect.yml  keep-app-awake.yml  rebuild-app-data.yml
.streamlit/: config.toml
app/: app_utils.py  streamlit_app.py
app/pages/: 1_Station_lookup.py  2_Methodology.py
data/gold/: app_data.parquet
