[project]
name = "fuel-fairness-project"
version = "0.1.0"
description = "UK fuel pricing fairness model and overcharging detector"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "numpy>=1.25",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openpyxl>=3.1.5",
    "yfinance>=1.5.1",
    "odfpy>=1.4.1",
]

[dependency-groups]
notebook = [
    "ipykernel>=7.0",
]

[tool.uv]
package = false
